force-app/main/default/objects/Factura__c/fields/Actualizacion_batch__c.field-meta.xml
<CustomField>
    <fullName>Actualizacion_batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualizacion batch</label>
    <type>Checkbox</type>
</CustomField>