force-app/main/default/objects/Factura__c/fields/Buscar_ultimo_valor_conocido__c.field-meta.xml
<CustomField>
    <fullName>Buscar_ultimo_valor_conocido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No utilizar en las vistas, es solo para el calculo de mayores costos</description>
    <label>Buscar ultimo valor conocido</label>
    <type>Checkbox</type>
</CustomField>