force-app/main/default/objects/Factura__c/fields/Certificado_Verde__c.field-meta.xml
<CustomField>
    <fullName>Certificado_Verde__c</fullName>
    <inlineHelpText>Indique el número del certificado IANCOL de 8 dígitos</inlineHelpText>
    <label>Certificado Verde anterior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>