force-app/main/default/objects/Factura__c/fields/Certificado_verde_nuevo__c.field-meta.xml
<CustomField>
    <fullName>Certificado_verde_nuevo__c</fullName>
    <label>Certificado verde</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>