force-app/main/default/objects/Factura__c/fields/Cobrado__c.field-meta.xml
<CustomField>
    <fullName>Cobrado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Completar SOLO para Facturas de Venta.
Indique cuando la factura sea cobrada y complete los campos a continuación</inlineHelpText>
    <label>Cobrado</label>
    <type>Checkbox</type>
</CustomField>