force-app/main/default/objects/Factura__c/fields/Coeficiente__c.field-meta.xml
<CustomField>
    <fullName>Coeficiente__c</fullName>
    <label>Coeficiente</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>