force-app/main/default/objects/Factura__c/fields/coeficiente_provisorio__c.field-meta.xml
<CustomField>
    <fullName>coeficiente_provisorio__c</fullName>
    <label>Coeficiente provisorio</label>
    <length>2</length>
    <type>Text</type>
</CustomField>