force-app/main/default/objects/Factura__c/fields/Comitente__c.field-meta.xml
<CustomField>
    <fullName>Comitente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Seleccione el Nombre del Cliente vinculado a la Obra</inlineHelpText>
    <label>Comitente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sociedad desarrolladora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas (Comitente)</relationshipLabel>
    <relationshipName>Facturas1</relationshipName>
    <type>Lookup</type>
</CustomField>