force-app/main/default/objects/Factura__c/fields/Comprobante__c.field-meta.xml
<CustomField>
    <fullName>Comprobante__c</fullName>
    <label>Comprobante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factura A</fullName>
            </value>
            <value>
                <fullName>Factura B</fullName>
            </value>
            <value>
                <fullName>Factura C</fullName>
            </value>
            <value>
                <fullName>Nota Crédito A</fullName>
            </value>
            <value>
                <fullName>Nota Crédito B</fullName>
            </value>
            <value>
                <fullName>Nota Crédito C</fullName>
            </value>
            <value>
                <fullName>Nota Débito A</fullName>
            </value>
            <value>
                <fullName>Nota Débito B</fullName>
            </value>
            <value>
                <fullName>Nota Débito C</fullName>
            </value>
            <value>
                <fullName>Recibo</fullName>
            </value>
            <value>
                <fullName>Remito</fullName>
            </value>
            <value>
                <fullName>Presupuesto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>