force-app/main/default/objects/Factura__c/fields/Condicion_de_IVA__c.field-meta.xml
<CustomField>
    <fullName>Condicion_de_IVA__c</fullName>
    <formula>if ( Proveedor_de_la_Factura__c == null,  text(Orden_de_compra__r.Proveedor__r.Condicion_de_IVA__c) , text(Proveedor_de_la_Factura__r.Condicion_de_IVA__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condicion de IVA</label>
    <type>Text</type>
</CustomField>