force-app/main/default/objects/Factura__c/fields/Cuit_proveedor__c.field-meta.xml
<CustomField>
    <fullName>Cuit_proveedor__c</fullName>
    <formula>if ( Proveedor_de_la_Factura__c == &quot;&quot; , Orden_de_compra__r.Proveedor__r.CUIT__c , Proveedor_de_la_Factura__r.CUIT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuit proveedor</label>
    <type>Text</type>
</CustomField>