force-app/main/default/objects/Factura__c/fields/Desacopio__c.field-meta.xml
<CustomField>
    <fullName>Desacopio__c</fullName>
    <label>Desacopio anticipo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>