force-app/main/default/objects/Factura__c/fields/Descricion__c.field-meta.xml
<CustomField>
    <fullName>Descricion__c</fullName>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>