force-app/main/default/objects/Factura__c/fields/Es_anticipo__c.field-meta.xml
<CustomField>
    <fullName>Es_anticipo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es anticipo</label>
    <type>Checkbox</type>
</CustomField>