force-app/main/default/objects/Factura__c/fields/es_comprobante_unico__c.field-meta.xml
<CustomField>
    <fullName>es_comprobante_unico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es comprobante unico?</label>
    <type>Checkbox</type>
</CustomField>