force-app/main/default/objects/Factura__c/fields/Es_mayor_costo__c.field-meta.xml
<CustomField>
    <fullName>Es_mayor_costo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es mayor costo?</label>
    <type>Checkbox</type>
</CustomField>