force-app/main/default/objects/Factura__c/fields/Estado_de_Cobro__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Cobro__c</fullName>
    <formula>IF( Proyecci_n__c =true, &quot;Proyectado&quot;, IF( Cobrado__c =true, &quot;Cobrado&quot;, IF(  Fecha_Vencimiento__c &gt; TODAY(), &quot;A Vencer&quot;, IF( Fecha_Vencimiento__c &lt;= TODAY() , &quot;Vencido&quot;,  &quot;Pendiente FC&quot;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado de Cobro</label>
    <type>Text</type>
</CustomField>