force-app/main/default/objects/Factura__c/fields/Factura_principal__c.field-meta.xml
<CustomField>
    <fullName>Factura_principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Son las facturas principales que luego tienen mayores costos</description>
    <label>Factura principal</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Facturas principales</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>