force-app/main/default/objects/Factura__c/fields/Fecha_autorizacion_GO__c.field-meta.xml
<CustomField>
    <fullName>Fecha_autorizacion_GO__c</fullName>
    <label>Fecha autorización GO</label>
    <type>Date</type>
</CustomField>