force-app/main/default/objects/Factura__c/fields/Fecha_de_Cobro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Cobro__c</fullName>
    <inlineHelpText>Indique la fecha de la efectiva recepción de los valores o acreditación de transferencia bancaria</inlineHelpText>
    <label>Fecha de Cobro</label>
    <type>Date</type>
</CustomField>