force-app/main/default/objects/Factura__c/fields/Fecha_de_revision__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_revision__c</fullName>
    <label>Fecha de revisión</label>
    <type>Date</type>
</CustomField>