force-app/main/default/objects/Factura__c/fields/Fecha_de_salida__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_salida__c</fullName>
    <label>Fecha de salida</label>
    <type>Date</type>
</CustomField>