force-app/main/default/objects/Factura__c/fields/Fecha_ingreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ingreso__c</fullName>
    <label>Fecha ingreso</label>
    <type>Date</type>
</CustomField>