force-app/main/default/objects/Factura__c/fields/Fecha_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento__c</fullName>
    <inlineHelpText>Completar SOLO para Facturas de Venta.
Indicar fecha de vencimiento recurrente o de lo contrario la que figura en el contrato</inlineHelpText>
    <label>Fecha Vencimiento</label>
    <type>Date</type>
</CustomField>