force-app/main/default/objects/Factura__c/fields/Importe_exento__c.field-meta.xml
<CustomField>
    <fullName>Importe_exento__c</fullName>
    <label>Importe exento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>