force-app/main/default/objects/Factura__c/fields/Importe_iva_21__c.field-meta.xml
<CustomField>
    <fullName>Importe_iva_21__c</fullName>
    <label>Importe iva 21%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>