force-app/main/default/objects/Factura__c/fields/importe_letras__c.field-meta.xml
<CustomField>
    <fullName>importe_letras__c</fullName>
    <label>Importe letras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>