force-app/main/default/objects/Factura__c/fields/Importe_neto__c.field-meta.xml
<CustomField>
    <fullName>Importe_neto__c</fullName>
    <label>Importe neto gravado</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>