force-app/main/default/objects/Factura__c/fields/Importe_neto_no_gravado__c.field-meta.xml
<CustomField>
    <fullName>Importe_neto_no_gravado__c</fullName>
    <label>Importe neto no gravado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>