force-app/main/default/objects/Factura__c/fields/Importe_otros_conceptos__c.field-meta.xml
<CustomField>
    <fullName>Importe_otros_conceptos__c</fullName>
    <label>Importe otros conceptos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>