force-app/main/default/objects/Factura__c/fields/Importe_percepcion_IIBB__c.field-meta.xml
<CustomField>
    <fullName>Importe_percepcion_IIBB__c</fullName>
    <label>Importe percepcion IIBB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>