force-app/main/default/objects/Factura__c/fields/Importe_total__c.field-meta.xml
<CustomField>
    <fullName>Importe_total__c</fullName>
    <formula>Importe_neto_no_gravado__c + Importe_exento__c + Importe_neto__c +  Importe_iva_21__c +  Importe_iva_10_5__c + Importe_iva_27__c +  Importe_percepcion_IIBB__c +  Importe_percepcion_IVA__c +  Importe_otros_conceptos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>