force-app/main/default/objects/Factura__c/fields/Importes_pagados__c.field-meta.xml
<CustomField>
    <fullName>Importes_pagados__c</fullName>
    <label>Importes pagados</label>
    <summarizedField>Pago_factura__c.Importe__c</summarizedField>
    <summaryForeignKey>Pago_factura__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>