force-app/main/default/objects/Factura__c/fields/Impuesto_2__c.field-meta.xml
<CustomField>
    <fullName>Impuesto_2__c</fullName>
    <label>Impuesto 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>