force-app/main/default/objects/Factura__c/fields/Impuestos__c.field-meta.xml
<CustomField>
    <fullName>Impuestos__c</fullName>
    <formula>Impuesto_1__c  +   Impuesto_2__c +  Impuesto_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impuestos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>