force-app/main/default/objects/Factura__c/fields/Indicador10__c.field-meta.xml
<CustomField>
    <fullName>Indicador10__c</fullName>
    <label>Indicador10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>