force-app/main/default/objects/Factura__c/fields/Indicador1__c.field-meta.xml
<CustomField>
    <fullName>Indicador1__c</fullName>
    <label>Indicador1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>