force-app/main/default/objects/Factura__c/fields/Indicador2__c.field-meta.xml
<CustomField>
    <fullName>Indicador2__c</fullName>
    <label>Indicador2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>