force-app/main/default/objects/Factura__c/fields/Instrumento_de_pago_constructora__c.field-meta.xml
<CustomField>
    <fullName>Instrumento_de_pago_constructora__c</fullName>
    <inlineHelpText>Utilizado unicamente por los comprobantes de la constructora</inlineHelpText>
    <label>Instrumento de pago constructora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>