force-app/main/default/objects/Factura__c/fields/Leyenda_certificado__c.field-meta.xml
<CustomField>
    <fullName>Leyenda_certificado__c</fullName>
    <label>Leyenda certificado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>