force-app/main/default/objects/Factura__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moneda</label>
    <referenceTo>Moneda__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>