force-app/main/default/objects/Factura__c/fields/Monto_Cobrado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Cobrado__c</fullName>
    <label>Monto Cobrado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>