force-app/main/default/objects/Factura__c/fields/No_controlar_importe_OC__c.field-meta.xml
<CustomField>
    <fullName>No_controlar_importe_OC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilizar unicamente cuando hay que cargar un comprobante enviado por el proveedor de manera equivocada, ya sea porque genero el comprobante para una sociedad incorrecta o por un monto incorrecto. Es necesario que luego se ingrese una Nota de Credito enviada por el proveedor</description>
    <label>No controlar importe OC</label>
    <type>Checkbox</type>
</CustomField>