force-app/main/default/objects/Factura__c/fields/Nombre_indicador10__c.field-meta.xml
<CustomField>
    <fullName>Nombre_indicador10__c</fullName>
    <label>Nombre indicador10</label>
    <length>80</length>
    <type>Text</type>
</CustomField>