force-app/main/default/objects/Factura__c/fields/Nombre_indicador1__c.field-meta.xml
<CustomField>
    <fullName>Nombre_indicador1__c</fullName>
    <label>Nombre indicador1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>