force-app/main/default/objects/Factura__c/fields/Nombre_indicador2__c.field-meta.xml
<CustomField>
    <fullName>Nombre_indicador2__c</fullName>
    <label>Nombre indicador2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>