force-app/main/default/objects/Factura__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Número</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
</CustomField>