force-app/main/default/objects/Factura__c/fields/Numero_de_certificado__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_certificado__c</fullName>
    <label>Numero de Certificado</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>