force-app/main/default/objects/Factura__c/fields/Numero_de_poliza__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_poliza__c</fullName>
    <label>Número de póliza</label>
    <length>80</length>
    <type>Text</type>
</CustomField>