force-app/main/default/objects/Factura__c/fields/Numero_de_Recibo__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Recibo__c</fullName>
    <label>Numero de Recibo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>