force-app/main/default/objects/Factura__c/fields/Numero_Nota_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Numero_Nota_de_Credito__c</fullName>
    <label>Número Nota de Crédito</label>
    <length>13</length>
    <type>Text</type>
</CustomField>