force-app/main/default/objects/Factura__c/fields/observaciones__c.field-meta.xml
<CustomField>
    <fullName>observaciones__c</fullName>
    <label>observaciones</label>
    <type>TextArea</type>
</CustomField>