force-app/main/default/objects/Factura__c/fields/Periodo_certificacion__c.field-meta.xml
<CustomField>
    <fullName>Periodo_certificacion__c</fullName>
    <label>Período certificación</label>
    <length>7</length>
    <type>Text</type>
</CustomField>