force-app/main/default/objects/Factura__c/fields/Periodo_control_documentacion__c.field-meta.xml
<CustomField>
    <fullName>Periodo_control_documentacion__c</fullName>
    <label>Período control documentación</label>
    <length>7</length>
    <type>Text</type>
</CustomField>