force-app/main/default/objects/Factura__c/fields/Periodo_Venta__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Venta__c</fullName>
    <description>Indicar el periodo de certificación de la factura</description>
    <label>Periodo Venta</label>
    <length>7</length>
    <type>Text</type>
</CustomField>