force-app/main/default/objects/Factura__c/fields/Porcentaje_entregado__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_entregado__c</fullName>
    <label>Porcentaje entregado</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>