force-app/main/default/objects/Factura__c/fields/Proveedor_de_la_Factura__c.field-meta.xml
<CustomField>
    <fullName>Proveedor_de_la_Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ingresar unicamente si el proveedor de la factura difiere del proveedor de la OC</description>
    <label>Proveedor de la Factura</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Proveedor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas (Proveedor de la Factura)</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>