force-app/main/default/objects/Factura__c/fields/Proveedor_de_la_OC__c.field-meta.xml
<CustomField>
    <fullName>Proveedor_de_la_OC__c</fullName>
    <formula>Orden_de_compra__r.Proveedor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proveedor de la OC</label>
    <type>Text</type>
</CustomField>