force-app/main/default/objects/Factura__c/fields/Proveedor_para_libro_compras__c.field-meta.xml
<CustomField>
    <fullName>Proveedor_para_libro_compras__c</fullName>
    <formula>if ( Proveedor_de_la_Factura__c == &quot;&quot; , Proveedor_de_la_OC__c , Proveedor_de_la_Factura__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proveedor para libro compras</label>
    <type>Text</type>
</CustomField>