force-app/main/default/objects/Factura__c/fields/Proyecci_n__c.field-meta.xml
<CustomField>
    <fullName>Proyecci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Completar SOLO para Facturas de Venta.
Tildar si la Factura es una proyección de honorarios futuros.</inlineHelpText>
    <label>Proyectado</label>
    <type>Checkbox</type>
</CustomField>