force-app/main/default/objects/Factura__c/fields/Remito__c.field-meta.xml
<CustomField>
    <fullName>Remito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remito</label>
    <referenceTo>Remito__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>