force-app/main/default/objects/Factura__c/fields/Responsable_Autorizacion__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Autorizacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Autorización</label>
    <referenceTo>Responsable__c</referenceTo>
    <relationshipLabel>Facturas (Responsable Autorización)</relationshipLabel>
    <relationshipName>Facturas2</relationshipName>
    <type>Lookup</type>
</CustomField>