force-app/main/default/objects/Factura__c/fields/Responsable_carga__c.field-meta.xml
<CustomField>
    <fullName>Responsable_carga__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable carga</label>
    <referenceTo>Responsable__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>