force-app/main/default/objects/Factura__c/fields/Responsable_de_revision__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_revision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable de revisión</label>
    <referenceTo>Responsable__c</referenceTo>
    <relationshipLabel>Facturas (Responsable de revisión)</relationshipLabel>
    <relationshipName>Facturas1</relationshipName>
    <type>Lookup</type>
</CustomField>