force-app/main/default/objects/Factura__c/fields/Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Sociedad__c</fullName>
    <formula>Orden_de_compra__r.Sociedad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sociedad de la OC</label>
    <type>Text</type>
</CustomField>