force-app/main/default/objects/Factura__c/fields/Sociedad_que_desarrolla__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_que_desarrolla__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ingresar unicamente si la sociedad de la factura difiere de la sociedad de la OC</description>
    <label>Sociedad que desarrolla</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sociedad desarrolladora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas (Sociedad que desarrolla)</relationshipLabel>
    <relationshipName>Facturas2</relationshipName>
    <type>Lookup</type>
</CustomField>