force-app/main/default/objects/Factura__c/fields/Tipo_impuesto_1__c.field-meta.xml
<CustomField>
    <fullName>Tipo_impuesto_1__c</fullName>
    <label>Tipo impuesto 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVA</fullName>
            </value>
            <value>
                <fullName>Percepción IVA</fullName>
            </value>
            <value>
                <fullName>IIBB</fullName>
            </value>
            <value>
                <fullName>IIBB Provincia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>