force-app/main/default/objects/Factura__c/fields/Total_recibos__c.field-meta.xml
<CustomField>
    <fullName>Total_recibos__c</fullName>
    <label>Total recibos</label>
    <summarizedField>Recibo__c.Importe_pagado__c</summarizedField>
    <summaryForeignKey>Recibo__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>