force-app/main/default/objects/Factura__c/validationRules/Controlar_que_este_cargado_el_proveedor.validationRule-meta.xml
<ValidationRule>
    <fullName>Controlar_que_este_cargado_el_proveedor</fullName>
    <active>false</active>
    <errorConditionFormula>if ( ISPICKVAL( Estado__c , &quot;Real&quot;) == true &amp;&amp; Proveedor_de_la_Factura__c == null, true, false)</errorConditionFormula>
    <errorDisplayField>Proveedor_de_la_Factura__c</errorDisplayField>
    <errorMessage>Para cargar una factura real es necesario declarar el proveedor de la factura</errorMessage>
</ValidationRule>