force-app/main/default/objects/Factura__c/validationRules/Formato_periodo_control_documentacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Formato_periodo_control_documentacion</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX(
 Periodo_control_documentacion__c  ,
&quot;^(\\d{2}\\-\\d{4})?$&quot;
)</errorConditionFormula>
    <errorDisplayField>Periodo_control_documentacion__c</errorDisplayField>
    <errorMessage>El formato valido es mm-yyyy</errorMessage>
</ValidationRule>