force-app/main/default/objects/Factura__c/validationRules/Formato_valido.validationRule-meta.xml
<ValidationRule>
    <fullName>Formato_valido</fullName>
    <active>true</active>
    <errorConditionFormula>if ( ISPICKVAL(Estado__c, &quot;Real&quot;) &amp;&amp; ( 
ISPICKVAL( Comprobante__c , &quot;Factura A&quot;) || 
ISPICKVAL( Comprobante__c , &quot;Factura B&quot;) || 
ISPICKVAL( Comprobante__c , &quot;Factura C&quot;) || 
ISPICKVAL( Comprobante__c , &quot;Nota Crédito A&quot;) || 
ISPICKVAL( Comprobante__c , &quot;Nota Crédito B&quot;) || 
ISPICKVAL( Comprobante__c , &quot;Nota Crédito C&quot;) || 
ISPICKVAL( Comprobante__c , &quot;Nota Débito A&quot;) || 
ISPICKVAL( Comprobante__c , &quot;Nota Débito B&quot;) || 
ISPICKVAL( Comprobante__c , &quot;Nota Débito C&quot;) 
), 
!REGEX( 
Numero__c, 
&quot;^(\\d{4}\\-\\d{8})?$&quot; 
),false)</errorConditionFormula>
    <errorDisplayField>Numero__c</errorDisplayField>
    <errorMessage>El formato de números de factura deben ser 0000-00000000
4 digitos del punto de venta
-
8 digitos del numero de comprobante</errorMessage>
</ValidationRule>