force-app/main/default/objects/Factura__c/validationRules/Formato_valido_nc.validationRule-meta.xml
<ValidationRule>
    <fullName>Formato_valido_nc</fullName>
    <active>false</active>
    <errorConditionFormula>!REGEX( 
 Numero_Nota_de_Credito__c , 
&quot;^(\\d{4}\\-\\d{8})?$&quot; 
)</errorConditionFormula>
    <errorDisplayField>Numero_Nota_de_Credito__c</errorDisplayField>
    <errorMessage>El formato valido para numeor de nota de credito es 0000-00000000</errorMessage>
</ValidationRule>