force-app/main/default/objects/Factura__c/validationRules/No_se_puede_cambiar_fecha_ingreso.validationRule-meta.xml
<ValidationRule>
    <fullName>No_se_puede_cambiar_fecha_ingreso</fullName>
    <active>true</active>
    <errorConditionFormula>if ( ISCHANGED( Fecha_ingreso__c ) &amp;&amp;  Responsable_carga__r.Name != &#39;MAKISSON SALCEDO&#39;, true, false)</errorConditionFormula>
    <errorDisplayField>Fecha_ingreso__c</errorDisplayField>
    <errorMessage>No puede cambiar la fecha de ingreso</errorMessage>
</ValidationRule>