force-app/main/default/objects/Factura__c/validationRules/periodo_certificacion.validationRule-meta.xml
<ValidationRule>
    <fullName>periodo_certificacion</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX(
 Periodo_certificacion__c ,
&quot;^(\\d{2}\\-\\d{4})?$&quot;
)</errorConditionFormula>
    <errorDisplayField>Periodo_certificacion__c</errorDisplayField>
    <errorMessage>El formato valido es mm-yyyy</errorMessage>
</ValidationRule>