force-app/main/default/objects/Factura__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo_de_factura__c</columns>
    <columns>Estado__c</columns>
    <columns>Numero__c</columns>
    <columns>Importe_neto__c</columns>
    <columns>Orden_de_compra__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>